product_docs/docs/edb-postgres-ai/1.2/hybrid-manager/analytics/index.mdx
---
title: Analytics in Hybrid Manager
navTitle: Analytics in Hybrid Manager
description: Understand how Hybrid Manager implements and manages key analytics capabilities and technologies for EDB Postgres deployments.
---

Welcome to the central resource for understanding and leveraging the analytics capabilities embedded within EDB Hybrid Manager (HM).

Hybrid Manager provides integrated support for:

- Apache Iceberg® and catalog services
- Delta Lake querying
- Tiered Tables with EDB Postgres Distributed (PGD)
- Lakehouse Clusters for high-speed analytics on object storage
- Unified management and observability of your analytics stack

By using these capabilities, you can build modern, cost-effective analytics architectures on Postgres with reduced operational overhead—fully managed through Hybrid Manager.

## Why Analytics in Hybrid Manager

EDB Hybrid Manager integrates analytics to help you:

- **Gain unified visibility:** View key metrics and operational trends across your entire EDB Postgres fleet managed by HM.
- **Optimize performance:** Identify performance bottlenecks and understand query behavior within HM-managed databases and Lakehouse Clusters.
- **Manage resources efficiently:** Monitor and tune resource consumption for HM-managed instances, including analytical workloads.
- **Enhance operational health:** Track the availability and status of analytical components and underlying database infrastructure.
- **Simplify data architectures:** Provision and manage EDB Postgres Lakehouse Clusters, implement Tiered Tables with PGD, and integrate with object storage—all from HM.

## Core Concepts and Capabilities

### Apache Iceberg®

In Hybrid Manager, Iceberg is used to:

- Manage large analytical tables in Iceberg format, queried by Lakehouse Clusters.
- Support PGD offloading of cold partitions to object storage in Iceberg format.
- Enable interoperability with external tools (Spark, Trino, etc.) via catalog-managed tables.
- Facilitate catalog management via HM-managed services (Lakekeeper) or external catalogs.

[Working with Apache Iceberg® in Hybrid Manager](./iceberg)

**Next topic:** [Configure an Iceberg Catalog](./learn/how-to/configure-iceberg-catalog)

### Delta Lake

Hybrid Manager supports querying Delta Lake tables:

- Lakehouse Clusters can query existing Delta Lake tables stored in object storage.
- Integrate HM-managed Lakehouse with Delta-based pipelines (Spark, Databricks, etc.).
- Enable fast analytics on existing Delta data lakes via Lakehouse Clusters.

[Working with Delta Lake in Hybrid Manager](./delta_lake)

**Next topic:** [Query Delta Lake tables](./learn/how-to/query-delta-lake-tables)

### Tiered Tables with PGD

Tiered Tables enable efficient management of large time-series datasets:

- PGD’s AutoPartition automates time-based partitioning.
- Cold partitions are offloaded to Iceberg format in object storage.
- Lakehouse Clusters provide query access across hot and cold data.
- Hybrid Manager helps configure and monitor Tiered Tables end-to-end.

[Implementing Tiered Tables in Hybrid Manager](./tiered_tables)

**Next topic:** [Configure Tiered AutoPartition](./learn/how-to/configure-tiered-autopartition)

### Lakehouse Clusters

Lakehouse Clusters are managed compute nodes in HM:

- Provide scalable, vectorized query execution on object storage.
- Support both Iceberg and Delta Lake formats.
- Integrate with catalogs (HM-managed or external).
- Unified with the broader HM ecosystem (PGD offloading, Tiered Tables, BI integrations).

[Lakehouse Clusters in Hybrid Manager](./lakehouse)

**Next topic:** [Provision your first Lakehouse Cluster](./learn/how-to/create-lakehouse-cluster)

## How These Capabilities Work Together

- **Data offloading:** PGD clusters offload cold data to object storage in Iceberg format.
- **Catalog services:** HM integrates with catalogs to manage table metadata; Lakehouse and PGD query through these catalogs.
- **Lakehouse Clusters:** Managed compute nodes run scalable analytical queries on offloaded data.
- **Delta Lake integration:** Lakehouse Clusters also query existing Delta Lake tables in place.
- **Unified management:** Hybrid Manager provides a single control plane to provision, configure, monitor, and optimize your analytics architecture.

## Getting Started: Quickstart Checklist

Follow this checklist to begin applying Hybrid Manager analytics features:

- [Analytics Concepts in Hybrid Manager](./learn/analytics_concepts) — Understand key patterns and capabilities.
- [Provision your first Lakehouse Cluster](./learn/how-to/create-lakehouse-cluster) — Deploy Lakehouse Clusters to enable scalable querying on object storage.
- [Configure an Iceberg Catalog](./learn/how-to/configure-iceberg-catalog) — Connect HM-managed or external catalogs to manage Iceberg tables.
- [Query Iceberg tables](./learn/how-to/query-iceberg-existing-tables) — Query Iceberg tables from your Lakehouse Clusters.
- [Query Delta Lake tables](./learn/how-to/query-delta-lake-tables) — Connect Lakehouse Clusters to existing Delta Lake tables.
- [Implement Tiered Tables](./learn/how-to/configure-tiered-autopartition) — Enable PGD AutoPartition and offload cold partitions to Iceberg.
- [Monitor Tiered Tables](./learn/how-to/monitor-tiered-tables) — Track the health and performance of your Tiered Table setup.
- [Explore Persona-Based Guidance](./learn/personas) — Tailored recommendations for DBAs, DevOps/SREs, Data Scientists, and Developers.
- [Solve Business Problems](./learn/use-cases) — Common analytics use cases and how Hybrid Manager solves them.
- [Full How-To Index](./learn/how-to/) — Step-by-step guides for advanced configurations and operations.

## Explore Further

- [Analytics Concepts in Hybrid Manager](./learn/analytics_concepts)
- [Working with Apache Iceberg® in Hybrid Manager](./iceberg)
- [Working with Delta Lake in Hybrid Manager](./delta_lake)
- [Implementing Tiered Tables in Hybrid Manager](./tiered_tables)
- [Lakehouse Clusters in Hybrid Manager](./lakehouse)
- [Persona-Based Guide](./learn/personas)
- [Solve Business Problems](./learn/use-cases)
- [How-To Guides](./learn/how-to/)
- [Analytics Tutorials](../../analytics/learn/tutorials/)

By leveraging these capabilities, Hybrid Manager enables you to build a modern, flexible, and performant analytics architecture across your EDB Postgres deployments—all through a unified and operationally efficient experience.
